@@ -559,10 +559,10 @@ $c->{order_methods}->{eprint} =
 
 $c->{order_methods}->{"eprint.review"} =
 {
-	"bystatuschange" => "-status_changed",
-	"byyearoldest"	 => "date_effective/creators/title",
-	"byname"  	 => "creators/-date_effective/title",
-	"bytitle" 	 => "title/creators/-date_effective"
+	"bystatuschanged"	=> "status_changed",
+	"bystatuschangedoldest"	=> "-status_changed",
+	"bytitle"		=> "title",
+	"bytitlerev"		=> "-title",
 };
 
 
