@@ -591,24 +591,26 @@ sub best_language
 
 
 ######################################################################
-=pod
-
-=item $names = $session->get_order_names( $dataset )
-
-Return a reference to a hash.
-
-The keys of this hash are the id's of the orderings of the dataset
-available to the public. eg. "byyear", "title" etc.
-
-The values are UTF8 strings containing the human-readable version,
-eg. "By Year".
-
-=cut
+#=pod
+#
+#=item $names = $session->get_order_names( $dataset )
+#
+#Return a reference to a hash.
+#
+#The keys of this hash are the id's of the orderings of the dataset
+#available to the public. eg. "byyear", "title" etc.
+#
+#The values are UTF8 strings containing the human-readable version,
+#eg. "By Year".
+#
+#=cut
 ######################################################################
 
 sub get_order_names
 {
 	my( $self, $dataset ) = @_;
+
+	EPrints::deprecated;
 		
 	my %names = ();
 	foreach( keys %{$self->{repository}->get_conf(
@@ -622,20 +624,22 @@ sub get_order_names
 
 
 ######################################################################
-=pod
-
-=item $name = $session->get_order_name( $dataset, $orderid )
-
-Return a UTF8 encoded string describing the human readable name of
-the ordering with ID $orderid in $dataset. For example, by default,
-"byyearoldest" will return "By Year (Oldest First)"
-
-=cut
+#=pod
+#
+#=item $name = $session->get_order_name( $dataset, $orderid )
+#
+#Return a UTF8 encoded string describing the human readable name of
+#the ordering with ID $orderid in $dataset. For example, by default,
+#"byyearoldest" will return "By Year (Oldest First)"
+#
+#=cut
 ######################################################################
 
 sub get_order_name
 {
 	my( $self, $dataset, $orderid ) = @_;
+
+	EPrints::deprecated;
 	
         return $self->phrase( 
 		"ordername_".$dataset->confid()."_".$orderid );
